fix: taille cards on mobile version

--- a/kasa/src/style/_mixins.scss
+++ b/kasa/src/style/_mixins.scss
@@ -18,6 +18,6 @@
 
 
 @mixin mobileCard{
-    width: 335px;
+    width: 100%;
     height: 255px;
 }
